Sugati/src/objects/Supplier_Bank_Detail__c.object
<CustomObject>
    <description>A list of bank details used by suppliers</description>
    <fields>
        <fullName>SBD_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Amount__c</fullName>
        <label>Amount:</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBD_Bank_Account__c</fullName>
        <label>Bank Account</label>
        <picklist>
            <picklistValues>
                <fullName>Swift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Dep_Rule__c</fullName>
        <label>Dep Rule:</label>
        <picklist>
            <picklistValues>
                <fullName>0-None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-At Conf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_IBAN__c</fullName>
        <label>IBAN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Office_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Office Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Owners_EM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owners (EM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Owners_P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owners (P)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Owners_W__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owners (W)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Payment_From_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment From Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Supplier Bank Details</relationshipLabel>
        <relationshipName>Supplier_Bank_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBD_Payment_Instruction__c</fullName>
        <label>Payment Instruction</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Post_Remittance_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Remittance Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Remittance_Comments_Office__c</fullName>
        <label>Remittance Comments (Office)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBD_Remittance_Comments__c</fullName>
        <label>Remittance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBD_SWIFT__c</fullName>
        <label>SWIFT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Specific_date__c</fullName>
        <label>Specific date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBD_State_County__c</fullName>
        <label>State/County</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Supplier_Comments__c</fullName>
        <label>Supplier Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBD_Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Bank Details</relationshipLabel>
        <relationshipName>Supplier_Bank_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBD_Supply_type__c</fullName>
        <label>Supply type:</label>
        <picklist>
            <picklistValues>
                <fullName>Acting as Agent (Y/N)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Output Serv Val on Rem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Web_Remittance_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Remittance Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDB_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDB_Primary_Bank_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This is the bank account that we would normally sent the money to.</inlineHelpText>
        <label>Supplier Primary Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier Bank Detail</label>
    <nameField>
        <displayFormat>SBD-{0000000000}</displayFormat>
        <label>Supplier Bank Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Bank Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>